--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <span>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</span>
             </div>
 
-            <div class="secImg">
+            <div class="secImg enjoy">
                 <img src="image/first.png" alt="">
                 <video src="video/firstvideo.m4v" autoplay loop muted></video>
             </div>
@@ -71,7 +71,7 @@
                 <span>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</span>
             </div>
 
-            <div class="secImg">
+            <div class="secImg watch">
                 <img src="image/thirdimg.png" alt="">
                 <video src="video/secondvideo.m4v" autoplay loop muted></video>
             </div>
