--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <h1><a href="phonepe://">Open PhonePe</a><br>
+                <a href="https://play.google.com/store/apps/details?id=com.phonepe.app">Download PhonePe</a>
+    </h1>
     
     <div class="main">
         <nav>
